deleteswagger
